--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,6 @@ margin-bottom: 60px;
 
 .nav li a {
     font-size: 26px;
-    background-color: aqua;
     padding: 30px;
 }
 img {
@@ -49,18 +48,28 @@ img {
     margin: 30px;
 }
 .list {
-
+display: flex;
+gap: 50px;
 }
 .list li {
-    display: flex;
+    width: 300px;
 }
-
 .list li .photo {
-    width: 360px;
-    margin-right: 40px;
+    width: 300px;
+    height: 300px;
 }
-.list li .text {
-    width: 600px;
+.list li .photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 100%;
+}
+.list li .text{
+    text-align: center;
+    margin-top: 20px;
+}
+.list li .text h3 {
+     margin-bottom: 16px;
 }
 .copyright {
     padding: 50px 0 50px 0;
