--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,10 @@ margin-bottom: 60px;
 img {
     width: 100%;
 }
+.h2 {
+     text-align: center;
+     margin-bottom: 50px;
+}
 .slide {
     margin: 30px;
 }
@@ -70,6 +74,14 @@ gap: 50px;
 }
 .list li .text h3 {
      margin-bottom: 16px;
+}
+.city_text {
+    padding: 50px 0 50px 0;
+}
+.city_text p {
+    margin-bottom: 50;
+    font-size: 18px;
+    line-height: 1.6;
 }
 .copyright {
     padding: 50px 0 50px 0;
